# dphpc

./: .gitignore  CMakeLists.txt  COO.cpp  COO.h  CSR.cpp  CSR.h  Dense.cpp  Dense.h  README.md  download_datasets.sh  install.sh  install_linux.sh  install_matrices.sh  kernel.cu  main.cpp  main.cu  matrix_test.cc  run_benchmark.sh  run_cmake.sh  sddmm.hpp  triplet.h
.github/workflows/: ci-cmake_tests.yml
data/: .gitignore
plots/: dummy_measures.csv  generate_plots.sh  get_num_threads.py  motivation_figure.py  plot.py  plot_bars.py  plot_bars_percentile.py  plot_performance.py  plot_roofline.py  plot_runtime.py  plot_speedup.py  plot_throughput.py  plot_violin.py  run_plot_percentiles.sh
plots/results/: results-BACK.csv  results-Cage14.csv  results-Enron-NISP.csv  results-a100-64nnz.csv  results-a100.csv  results-k128.csv  results-k32.csv  results-k64.csv  results-v100-64nnz.csv  results-v100.csv  results.csv
plots/results/64nnz_per_thread/a100/: results-a100.csv
plots/results/64nnz_per_thread/v100/: results-v100.csv
plots/results/best_thread_combination/a100/: results-a100.csv
plots/results/best_thread_combination/v100/: results-v100.csv
plots/results/maximize_threads/a100/: results-a100.csv
plots/results/maximize_threads/v100/: results-v100.csv
plots/results/motivation/a100/: results-a100.csv
plots/results/motivation/v100/: results-v100.csv
plots/results/pytorch-invest/a100/: results-a100.csv
plots/results/pytorch-invest/v100/: results-v100.csv
plots/results/thread_combination/: get_best_combinations.py
plots/results/thread_combination/a100/: results-a100.csv
plots/results/thread_combination/v100/: results-v100.csv
python/: benchmark_dgl.py  instructions.md
src/: CMakeLists.txt  main.cpp  util.hpp
src/benchmark/: benchmark.hpp  competitor.hpp  dataset.hpp
src/competitors/: competitors.h
src/competitors/cpu/: cpu_basic.hpp  cpu_pytorch.hpp
src/competitors/gpu/: gpu_adaptive_tiling.cu  gpu_adaptive_tiling.hpp  gpu_basic.cu  gpu_basic.hpp  gpu_blocked.cu  gpu_blocked.hpp  gpu_convert.cu  gpu_convert.hpp  gpu_cuSPARSE.cu  gpu_cuSPARSE.hpp  gpu_dgl.hpp  gpu_dynamic.hpp  gpu_preprocessing.cu  gpu_preprocessing.hpp  gpu_pytorch.hpp  gpu_shared.cu  gpu_shared.hpp  gpu_tensor.cu  gpu_tensor.hpp  gpu_thread_dispatcher.cu  gpu_thread_dispatcher.hpp  gpu_tiled.cu  gpu_tiled.hpp
src/matrices/: COO.hpp  CSR.hpp  Dense.hpp  matrices.h  triplet.h
src/utils/: file_writer.hpp  helpers.hpp  random_generator.hpp  util.hpp
tests/: CMakeLists.txt  matrix_test.cc
